Fix filter flyouts getting hidden by navigation

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
@@ -552,7 +552,6 @@ table.table-hover tbody tr.draggable:hover {
     box-sizing: content-box;
     display: none;
     position: absolute;
-    right: 0;
     background: #fff;
     background: rgba(255, 255, 255, 0.98);
     list-style: none;
